--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,17 @@
 version: '3.8'
-
 services:
-  discord-link-mover:
-    build: .
-    container_name: discord-link-mover
-    restart: unless-stopped
+  link-mover:
+    image: link-mover-bot
+    build:
+      context: .
+      dockerfile: Dockerfile
     environment:
-      BOT_TOKEN: ${BOT_TOKEN}
-      SOURCE_CHANNEL_ID: ${SOURCE_CHANNEL_ID}
-      DESTINATION_CHANNEL_ID: ${DESTINATION_CHANNEL_ID}
+      - BOT_TOKEN=${BOT_TOKEN}
+      - SOURCE_CHANNEL_ID=${SOURCE_CHANNEL_ID}
+      - DESTINATION_CHANNEL_ID=${DESTINATION_CHANNEL_ID}
     volumes:
-      - ./logs:/app/logs
-      - ./recent_links.json:/app/recent_links.json
-    # No ports needed for Discord bots 
+      - link-mover-logs:/app/logs
+    restart: unless-stopped
+volumes:
+  link-mover-logs:
+    name: link-mover-logs
