--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,14 @@
 version: '3.8'
+
 services:
-  link-mover:
-    image: link-mover-bot
-    build:
-      context: .
-      dockerfile: Dockerfile
-    environment:
-      - BOT_TOKEN=${BOT_TOKEN}
-      - SOURCE_CHANNEL_ID=${SOURCE_CHANNEL_ID}
-      - DESTINATION_CHANNEL_ID=${DESTINATION_CHANNEL_ID}
-    volumes:
-      - link-mover-logs:/app/logs
-      - link-mover-data:/app/data
+  discord-link-mover:
+    build: .
+    container_name: discord-link-mover
     restart: unless-stopped
-volumes:
-  link-mover-logs:
-    name: link-mover-logs
-  link-mover-data:
-    name: link-mover-data
+    environment:
+      BOT_TOKEN: ${BOT_TOKEN}
+      SOURCE_CHANNEL_ID: ${SOURCE_CHANNEL_ID}
+      DESTINATION_CHANNEL_ID: ${DESTINATION_CHANNEL_ID}
+    volumes:
+      - ./logs:/app/logs
+    # No ports needed for Discord bots 
